# ads-auto

./: pyproject.toml
adspower_automation.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/adspower_automation/: .gitignore  __init__.py  main.py  requirements.txt
src/adspower_automation/config/: __init__.py  settings.py
src/adspower_automation/core/: __init__.py  exceptions.py  interfaces.py
src/adspower_automation/models/: __init__.py  profile.py
src/adspower_automation/services/: __init__.py  profile_service.py
src/adspower_automation/strategies/: __init__.py  pyautogui_strategy.py  selenium_strategy.py
src/adspower_automation/utils/: __init__.py  logger.py
